@@ -6,6 +6,7 @@
 	vm : fixed bug in interp -> jit call
 	std : added misc.c (float & double bytes manipulations)
 	std : fixed buf in sys_read_dir on windows (directory not closed correctly)
+	std : added sys_getch
 	allowed break & continues in try/catch if they don't break outside
 	nekoml : fixed bug in lexer allocating too bug memory when small reads
 	nekotools : bugfixes in server, added static file streaming
